--- a/FakeCertification/app/src/main/res/layout/activity_main.xml
+++ b/FakeCertification/app/src/main/res/layout/activity_main.xml
@@ -13,4 +13,13 @@
       android:background="@android:color/black">
   </FrameLayout>
 
+  <ZoomControls
+      android:id="@+id/main_camera_zoom"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_alignBottom="@id/layout_camera"
+      android:layout_centerInParent="true">
+
+  </ZoomControls>
+
 </RelativeLayout>
