--- a/FakeCertification/app/src/main/res/layout/dummy_image_holder.xml
+++ b/FakeCertification/app/src/main/res/layout/dummy_image_holder.xml
@@ -6,7 +6,7 @@
               android:layout_height="match_parent">
 
   <com.facebook.drawee.view.SimpleDraweeView
-      android:id="@+id/iv_main_imageView"
+      android:id="@+id/iv_dummy_image"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       />
