--- a/FakeCertification/app/src/main/res/layout/reaction_holder.xml
+++ b/FakeCertification/app/src/main/res/layout/reaction_holder.xml
@@ -45,6 +45,7 @@
       android:orientation="horizontal">
 
     <TextView
+        android:id="@+id/tv_reaction_nickname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#125688"
@@ -53,15 +54,18 @@
         />
 
     <TextView
+        android:id="@+id/tv_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="7dp"
         android:textSize="14dp"
+        android:textColor="#000000"
         android:text="leekeonwooasdfasdf"
         />
   </LinearLayout>
 
   <TextView
+      android:id="@+id/tv_hashtag"
       android:layout_marginLeft="12.5dp"
       android:layout_marginRight="12.5dp"
       android:layout_width="wrap_content"
