--- a/FakeCertification/app/src/main/res/layout/recycler_main.xml
+++ b/FakeCertification/app/src/main/res/layout/recycler_main.xml
@@ -8,6 +8,7 @@
       android:id="@+id/rv_main"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:layout_marginBottom="56dp"
       >
   </android.support.v7.widget.RecyclerView>
 
